# shopping_cart_backend

./: .env.template  .gitignore  Dockerfile  Dockerfile-aws  docker-compose-app.yml  docker-compose-mongodb-repilca.yml  docker-compose-mongodb-staodalone.yml  docker-compose-redis.yml  log-config-aws.ini  log-config.ini  pyproject.toml  readme.md  rsa.py  standalone-init.sh
app/: app.py
app/config/: auth_middleware.py  common_middleware.py  daily_rotating_handler.py  jwt_bearer.py  lifespan.py  redis_cache.py  sc_exception_handlers.py  settings.py  transaction.py  uncatched_exception_handler.py
app/model/common/: __init__.py  enums.py  sc_exception.py
app/model/entity/: __init__.py  custom_exception.py  order.py  order_detail.py  order_detail_product.py  product.py  shopping_record.py  user.py
app/model/jwt/: base_jwt.py  google_id_token.py  shopping_cart_jwt.py
app/model/req/: cart_req.py  resend_email_req.py  user_req.py
app/model/res/: base.py  cart_product.py  current_cart_res.py  order_detail_res.py  product_res.py  (+1 more)
app/router/: auth.py  cart.py  health.py  product.py  record.py  refresh.py
app/service/: auth.py  common.py  email.py  http_util.py  log_service.py  oauth.py  product.py  user.py
terraform/: dev.postman_environment.json  fastapi-sc.postman_collection.json  readme.md
terraform/aws-consul-envoy/: Dockerfile  entrypoint.sh
terraform/aws-nginx/: Dockerfile  nginx.conf.template
terraform/dev/: apply-app.sh  apply-infra.sh  apply-nginx.sh  destroy-app.sh  destroy-infra.sh  destroy-nginx.sh  destroy.sh  general.tfvars.template
(+25 files in other folders)
