[tool.poetry]
name = "fastapi-sc-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_sc_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
motor = "^3.1.1"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
beanie = "^1.18.0"
oauthlib = "^3.2.2"
pyjwt = {extras = ["crypto"], version = "^2.6.0"}
httpx = "^0.24.0"
requests = "^2.28.2"
redis = {extras = ["hiredis"], version = "^4.5.4"}
itsdangerous = "^2.1.2"
google-api-python-client = "^2.86.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
jwcrypto = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
